# Object-Oriented_Programming_laboratory_work_1

./: README.md  environment.yml  pyproject.toml  requirements.txt
examples/: example_1.py
individual/: individual_1.py  individual_2.py
src/: example_1.py  individual_1.py  individual_2.py
tests/: test_individual_1.py  test_individual_2.py
